# kdeartwork

./: Makefile  README.md  kdeartwork-4.3.4-screesaver-bz#736624.patch  kdeartwork.spec
src/: .krazy  CMakeLists.txt  CTestConfig.cmake
src/ColorSchemes/: CMakeLists.txt
src/HighResolutionWallpapers/: CMakeLists.txt
src/IconThemes/: CMakeLists.txt
src/IconThemes/kdeclassic/: index.theme
src/IconThemes/mono/: TODO  iconcopier.rb  index.theme
src/IconThemes/nuvola/: index.theme  readme.txt
src/IconThemes/primary/: LICENSE  index.theme
src/WeatherWallpapers/: CMakeLists.txt
src/WeatherWallpapers/At_Night/: metadata.desktop
src/WeatherWallpapers/Beach_Reflecting_Clouds/: metadata.desktop
src/WeatherWallpapers/City_at_Night/: metadata.desktop
src/WeatherWallpapers/Icy_Tree/: metadata.desktop
src/WeatherWallpapers/JK_Bridge_at_Night/: metadata.desktop
src/WeatherWallpapers/Lightning/: metadata.desktop
src/WeatherWallpapers/Storm/: metadata.desktop
src/WeatherWallpapers/Winter_Track/: metadata.desktop
src/desktopthemes/: CMakeLists.txt
src/desktopthemes/Androbit/: CHANGELOG  CMakeLists.txt  metadata.desktop
src/desktopthemes/Aya/: CMakeLists.txt  metadata.desktop
src/desktopthemes/Clean-Blend/: CMakeLists.txt  colors  metadata.desktop
src/desktopthemes/Elegance/: metadata.desktop
src/desktopthemes/Produkt/: CMakeLists.txt  metadata.desktop
src/desktopthemes/Silicon/: colors  metadata.desktop
src/desktopthemes/Tibanna/: CMakeLists.txt  metadata.desktop
src/desktopthemes/heron/: metadata.desktop
src/desktopthemes/slim-glow/: CMakeLists.txt  LICENSE  metadata.desktop
src/emoticons/: CMakeLists.txt
src/emoticons/BoxedEmoticonSet/: CMakeLists.txt
src/emoticons/KMess/: CMakeLists.txt
src/emoticons/KMess-Blue/: CMakeLists.txt
src/emoticons/KMess-Cartoon/: CMakeLists.txt
src/emoticons/KMess-Violet/: CMakeLists.txt
src/emoticons/ccmathteam.com/: CMakeLists.txt
src/emoticons/greggman.com/: CMakeLists.txt
src/emoticons/phpBB/: CMakeLists.txt
src/emoticons/plain/: CMakeLists.txt
src/emoticons/redones/: CMakeLists.txt  emoticons.xml
src/emoticons/set1/: CMakeLists.txt
src/kscreensaver/: CMakeLists.txt
src/kscreensaver/kdesavers/: CMakeLists.txt  Flux.cpp  KBanner.desktop  KBlob.desktop  KClock.desktop  KEuphoria.desktop  KFiresaver.desktop  KFlux.desktop  KFountain.desktop  KGravity.desktop  KLines-saver.desktop  KLorenz.desktop  KPendulum.desktop  KPolygon.desktop  KRotation.desktop  KScience.desktop  KSlideshow.desktop  KSolarWinds.desktop  KVm.desktop  KWave.desktop  SolarWinds.cpp  config-kdesavers.h.cmake  kclock.cpp  kvm.cpp  kvm.h  pendulum.cpp  pendulum.h  pendulumcfg.ui  rkodesolver.h  rotation.cpp  rotation.h  rotationcfg.ui  slideshow.cpp
src/kscreensaver/kpartsaver/: Messages.sh  configwidget.ui  kpartsaver.cpp  kpartsaver.desktop  kpartsaver.h
src/kscreensaver/kxsconfig/: CMakeLists.txt  Messages.sh  create-hacks-pot.py  hacks.pot  kxsconfig.cpp  kxscontrol.cpp  kxscontrol.h  kxsitem.cpp  kxsrun.cpp  kxsxml.cpp  kxsxml.h
src/kscreensaver/xsavers/: KSpace.desktop  KSwarm.desktop
src/kwin-styles/: CMakeLists.txt  Messages.sh
src/kwin-styles/cde/: CMakeLists.txt  cde.desktop  cdeclient.cpp  cdeclient.h
src/kwin-styles/glow/: CMakeLists.txt  glow.desktop  glowbutton.cpp  glowbutton.h  glowclient.cpp  glowclient.h  resources.h
src/kwin-styles/icewm/: CMakeLists.txt  icewm.cpp  icewm.desktop  icewm.h
src/kwin-styles/kde1/: CMakeLists.txt  kde1.desktop  kde1client.cpp  kde1client.h  kde1client_bitmaps.h
src/kwin-styles/kde2/: CMakeLists.txt  kde2.cpp  kde2.desktop
src/kwin-styles/keramik/: CMakeLists.txt  keramik.cpp  keramik.desktop  keramik.h
src/kwin-styles/kstep/: CMakeLists.txt  kstep.desktop  nextclient.cpp  nextclient.h
src/kwin-styles/modernsystem/: CMakeLists.txt  modernsys.cpp  modernsystem.desktop
src/kwin-styles/openlook/: CMakeLists.txt  OpenLook.cpp  OpenLook.h  openlook.desktop
src/kwin-styles/quartz/: CMakeLists.txt  quartz.cpp  quartz.desktop  quartz.h
src/kwin-styles/redmond/: CMakeLists.txt  redmond.cpp  redmond.desktop
src/kwin-styles/riscos/: AboveButton.cpp  AboveButton.h  Button.cpp  Button.h  CMakeLists.txt  CloseButton.cpp  CloseButton.h  HelpButton.cpp  HelpButton.h  IconifyButton.cpp  IconifyButton.h  LowerButton.cpp  LowerButton.h  Manager.cpp  Manager.h  MaximiseButton.cpp  MaximiseButton.h  Palette.h  Static.cpp  StickyButton.cpp  StickyButton.h  riscos.desktop
src/kwin-styles/system/: CMakeLists.txt  system.desktop  systemclient.cpp  systemclient.h
src/kwin-styles/web/: CMakeLists.txt  Web.cpp  Web.h  WebButton.h  web.desktop
src/sounds/: CMakeLists.txt
src/styles/: CMakeLists.txt
src/styles/phase/: CMakeLists.txt  bitmaps.h  phase.themerc  phasestyle.cpp  phasestyle.h
src/wallpapers/: CMakeLists.txt
src/wallpapers/Aghi/: metadata.desktop
src/wallpapers/Air/: metadata.desktop
src/wallpapers/Atra_Dot/: metadata.desktop
src/wallpapers/Blue_Curl/: metadata.desktop
src/wallpapers/Chess/: metadata.desktop
src/wallpapers/Code_Poets_Dream/: metadata.desktop
src/wallpapers/Colorado_Farm/: metadata.desktop
src/wallpapers/Curls_on_Green/: metadata.desktop
src/wallpapers/Damselfly/: metadata.desktop
src/wallpapers/EOS/: metadata.desktop
src/wallpapers/Emotion/: metadata.desktop
src/wallpapers/Ethais/: metadata.desktop
src/wallpapers/Evening/: metadata.desktop
src/wallpapers/Field/: metadata.desktop
src/wallpapers/Fields_of_Peace/: metadata.desktop
src/wallpapers/Finally_Summer_in_Germany/: metadata.desktop
src/wallpapers/Flower_drops/: metadata.desktop
src/wallpapers/Fresh_Morning/: metadata.desktop
src/wallpapers/Golden_Ripples/: metadata.desktop
src/wallpapers/Green_Concentration/: metadata.desktop
src/wallpapers/HighTide/: metadata.desktop
src/wallpapers/Holiday_Cactus/: metadata.desktop
src/wallpapers/Korea/: metadata.desktop
src/wallpapers/Ladybuggin/: metadata.desktop
src/wallpapers/Leafs_Labyrinth/: metadata.desktop
src/wallpapers/Midnight_in_Karelia/: metadata.desktop
(+1455 files in other folders)
